Always fork